# stewartjarod_guardrails

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml
.claude/commands/: release.md
.github/workflows/: release-npm.yml
examples/: github-ci.yml
npm/cli/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
npm/scripts/: update-versions.mjs
src/: config.rs  git_diff.rs  init.rs  lib.rs  main.rs  mcp.rs  scan.rs
src/cli/: format.rs  mod.rs  toml_config.rs
src/rules/: banned_dependency.rs  banned_import.rs  banned_pattern.rs  factory.rs  mod.rs  ratchet.rs  tailwind_dark_mode.rs
