[package]
name = "guardrails"
version = "0.1.0"
edition = "2021"
description = "Enforce architectural decisions AI coding tools keep ignoring"

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ignore = "0.4"
globset = "0.4"
serde_json = "1"

[dev-dependencies]
tempfile = "3.25.0"
